load(
    "//ign_bazel:generate_include_header.bzl",
    "generate_include_header",
)
load(
    "//ign_bazel:ign_export_header.bzl",
    "ign_export_header",
)

public_headers_no_gen = [
    "include/ignition/plugin/Register.hh",
    "include/ignition/plugin/RegisterMore.hh",
    "include/ignition/plugin/detail/Register.hh",
]

ign_export_header(
    name = "include/ignition/plugin/register/Export.hh",
    export_base = "IGNITION_PLUGIN_REGISTER",
    lib_name = "ignition-plugin",
    visibility = ["//visibility:private"],
)

generate_include_header(
    name = "register_hh_genrule",
    out = "include/ignition/plugin/register.hh",
    hdrs = public_headers_no_gen + [
        "include/ignition/plugin/register/Export.hh",
    ],
)

public_headers = public_headers_no_gen + [
    "include/ignition/plugin/register/Export.hh",
    "include/ignition/plugin/register.hh",
]

cc_binary(
    name = "libignition-plugin2-register.so",
    srcs = public_headers,
    includes = ["include"],
    linkopts = ["-Wl,-soname,libignition-plugin2-register.so"],
    linkshared = True,
    visibility = [],
    deps = [
        "//ign_bazel:utilities",
        "//ign_plugin/core:ign_plugin",
    ],
)

cc_library(
    name = "register",
    srcs = ["libignition-plugin2-register.so"],
    hdrs = public_headers,
    includes = ["include"],
    linkstatic = True,
    visibility = ["//visibility:public"],
    deps = [
        "//ign_bazel:utilities",
        "//ign_plugin/core:ign_plugin",
    ],
    alwayslink = 1,
)
